# vetting

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: tests.yml
notebooks/: TOI-1807.ipynb  new_test_dev.ipynb
src/: __init__.py
src/vetting/: __init__.py  centroiding.py  version.py
tests/: test_centroids.py
