[tool.poetry]
name = "vetting"
version = "0.1.0"
description = "Simple, stand-alone vetting tools for transiting signals in Keper, K2 and TESS data"
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lightkurve = "^1.11.3"
corner = "^2.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
