[tool.poetry]
name = "vetting"
version = "0.1.8"
description = "Simple, stand-alone vetting tools for transiting signals in Keper, K2 and TESS data"
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SSDataLab/vetting"
repository = "https://github.com/SSDataLab/vetting"
keywords = ["NASA, Kepler, K2, TESS, Astronomy"]

[tool.poetry.dependencies]
python = "^3.7"
lightkurve = ">=2.0.9"
corner = "^2.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
pytest = "^6.2.1"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
